--- a/package.json
+++ b/package.json
@@ -36,7 +36,6 @@
     "dotenv": "^16.6.1",
     "framer-motion": "^11.18.2",
     "lucide-react": "^0.378.0",
-    "next": "^14.2.35",
     "next-pwa": "^5.6.0",
     "next-seo": "^6.8.0",
     "next-themes": "^0.3.0",
@@ -59,14 +58,18 @@
     "@radix-ui/react-slot": "^1.2.4",
     "@tailwindcss/typography": "^0.5.19",
     "@types/react": "18.2.75",
+    "@typescript-eslint/eslint-plugin": "^7.18.0",
+    "@typescript-eslint/parser": "^7.18.0",
     "autoprefixer": "^10.4.23",
     "commitizen": "^4.3.1",
     "cross-env": "^7.0.3",
     "eslint": "^8.57.1",
     "eslint-config-next": "^14.2.35",
     "eslint-config-sznm": "^2.0.4",
+    "eslint-plugin-sonarjs": "^3.0.5",
     "husky": "^9.1.7",
     "lint-staged": "^15.5.2",
+    "next": "^14.2.35",
     "next-sitemap": "^4.2.3",
     "postcss": "^8.5.6",
     "prettier": "3.2.5",
