--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "date-fns": "^3.6.0",
     "dotenv": "^16.6.1",
     "framer-motion": "^11.18.2",
+    "html-react-parser": "^5.2.11",
     "lucide-react": "^0.378.0",
     "next-pwa": "^5.6.0",
     "next-seo": "^6.8.0",
